--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "tldraw-cards",
   "version": "0.0.0",
   "private": true,
+  "type": "module",
   "scripts": {
     "dev": "vite",
     "build": "vite build",
@@ -9,19 +10,20 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "tldraw": "file:../tldraw/packages/tldraw",
     "@tldraw/editor": "file:../tldraw/packages/editor",
-    "@tldraw/store": "file:../tldraw/packages/store",
     "@tldraw/state": "file:../tldraw/packages/state",
     "@tldraw/state-react": "file:../tldraw/packages/state-react",
+    "@tldraw/store": "file:../tldraw/packages/store",
     "@tldraw/tlschema": "file:../tldraw/packages/tlschema",
     "@tldraw/utils": "file:../tldraw/packages/utils",
-    "@tldraw/validate": "file:../tldraw/packages/validate"
+    "@tldraw/validate": "file:../tldraw/packages/validate",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "tldraw": "file:../tldraw/packages/tldraw"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4.1.18",
+    "@vitejs/plugin-react": "^5.1.2",
     "autoprefixer": "^10.4.23",
     "postcss": "^8.5.6",
     "tailwindcss": "^4.0.0",
