--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "tldraw-cards",
+  "name": "nfl-index-as-cards",
   "version": "0.0.0",
   "private": true,
   "type": "module",
@@ -22,6 +22,9 @@
     "tldraw": "file:../tldraw/packages/tldraw"
   },
   "devDependencies": {
+    "@babel/plugin-proposal-class-properties": "^7.18.6",
+    "@babel/plugin-proposal-decorators": "^7.28.0",
+    "@babel/plugin-transform-class-static-block": "^7.28.3",
     "@tailwindcss/postcss": "^4.1.18",
     "@vitejs/plugin-react": "^5.1.2",
     "autoprefixer": "^10.4.23",
